src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dwU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: U\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 0 × 0, bounds: 1272 × 712, states: []
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
